--- a/package.json
+++ b/package.json
@@ -8,29 +8,29 @@
     "pnpm": "^8"
   },
   "scripts": {
-    "start": "gulp",
-    "watch": "gulp",
-    "build": "gulp scripts & gulp scss",
-    "lint": "eslint . --ext .js",
-    "lint:fix": "eslint . --fix --ext .js"
+    "start": "vite build -w",
+    "build": "vite build",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --fix --ext .ts",
+    "theme:dev": "shopify theme dev --store weblovo-store"
   },
   "devDependencies": {
-    "@rollup/plugin-terser": "^0.4.4",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-prettier": "^8",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-sass": "^5.1.0",
     "prettier": "^3.2.5",
-    "rollup": "^4.16.4",
-    "sass": "^1.58.3"
+    "sass": "^1.58.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "swiper": "^11.1.3"
+  }
 }
