--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "engines": {
     "node": "^20",
     "pnpm": "^8"
@@ -15,6 +16,7 @@
     "theme:dev": "shopify theme dev --store weblovo-store"
   },
   "devDependencies": {
+    "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
@@ -22,6 +24,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "glob": "^10.3.15",
     "prettier": "^3.2.5",
     "sass": "^1.58.3",
     "typescript": "^5.4.5",
