--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-shopify-theme",
+  "name": "liquid-product-gallery",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
